--- a/pandas_seguimiento_transferencia_dominios.ipynb
+++ b/pandas_seguimiento_transferencia_dominios.ipynb
@@ -24,7 +24,7 @@
       "source": [
         "Este script realiza seguimiento de la información WhoIs y MX de los dominios que se listen en un google sheets.\n",
         "Para comenzar a utilizarlo:<br>\n",
-        "1) Editar la URL del Google sheets que se use (primera columna, a partir de la segunda fila pegar los dominios)<br>\n",
+        "1) Editar la URL del Google sheets que se use (Pegar los dominios en la primera columna, a partir de la segunda fila)<br>\n",
         "2) Editar en el código el número máximo de filas a considerar (muy importante!)<br><br>\n",
         "\n",
         "-> Pueden haber límites de consultas diarias a las APIs."
